[package]
name = "shut-me-down"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
notify-rust = { version = "4.11.4", optional = true }
regex = "1.11.1"

[features]
default = ["notify", "beep"]
notify = ["dep:notify-rust"]
beep = []
