[package]
name = "shut-me-down"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
fs4 = { version = "0.13.1", features = ["tokio"], optional = true }
notify-rust = { version = "4.11.4", optional = true }
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["notify"]
notify = ["dep:notify-rust"]
beep = []
register = ["dep:fs4"]
